# ExtendedConsole

./: .gitignore  CMakeLists.txt  LICENSE
Source/: 64hooks.asm  Appmain.cpp  Console.cpp  Function.hpp  Stdinclude.hpp
Source/Configuration/: Defines.hpp  Macros.hpp
Source/Utility/: Base64.hpp  Bytebuffer.cpp  Bytebuffer.hpp  FNV1Hash.hpp  Filesystem.hpp  Hooking.cpp  Hooking.hpp  Logfile.hpp  Memprotect.hpp  PackageFS.cpp  PackageFS.hpp  Patternscan.cpp  Patternscan.hpp  Variadicstring.hpp
